Fix enums in DTOs
