# lib/codegen/openapi.snapshot.json
@@ -481,6 +481,69 @@
         }
       }
     },
+    "/api/lists/sendEmail": {
+      "post": {
+        "tags": [
+          "Lists"
+        ],
+        "operationId": "sendEmailWithList",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SendEmailWithListRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/lists": {
+      "get": {
+        "tags": [
+          "Lists"
+        ],
+        "operationId": "getList",
+        "parameters": [
+          {
+            "name": "From",
+            "in": "query",
+            "required": true,
+            "style": "form",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "To",
+            "in": "query",
+            "required": true,
+            "style": "form",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetListResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/meals/{mealId}": {
       "put": {
         "tags": [
@@ -844,6 +907,19 @@
         }
       }
     },
+    "/test": {
+      "get": {
+        "tags": [
+          "Test"
+        ],
+        "operationId": "test",
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/users/{userId}": {
       "put": {
         "tags": [
@@ -1097,12 +1173,29 @@
       },
       "DifficultyLevel": {
         "enum": [
-          "Easy",
-          "More effort",
-          "Pro"
+          0,
+          1,
+          2
         ],
         "type": "integer",
         "format": "int32"
+      },
+      "GetListResponse": {
+        "type": "object",
+        "properties": {
+          "count": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "ingredients": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
       },
       "GetMealResponse": {
         "type": "object",
@@ -1449,6 +1542,23 @@
         "properties": {
           "email": {
             "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "SendEmailWithListRequest": {
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "ingredients": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
             "nullable": true
           }
         },
